objects/alm_pm2__Jenkins_Job__c.object
<CustomObject>
 <fullName>alm_pm2__Jenkins_Job__c</fullName>
 <description>Represents a job on a Jenkins CI build server.</description>
 <fields>
  <fullName>alm_pm2__Build_Rule__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Build Rule</label>
  <referenceTo>alm_pm2__Build_Rule__c</referenceTo>
  <relationshipLabel>Jenkins Jobs</relationshipLabel>
  <relationshipName>Jenkins_Jobs</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_pm2__CI_Instance__c</fullName>
  <deleteConstraint>Restrict</deleteConstraint>
  <inlineHelpText>The target instance for this Job</inlineHelpText>
  <label>CI Instance</label>
  <referenceTo>alm_pm2__CI_Instance__c</referenceTo>
  <relationshipLabel>Jenkins Jobs</relationshipLabel>
  <relationshipName>Jenkins_Jobs</relationshipName>
  <required>true</required>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Dependent_Jenkins_Job__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <description>A job dependent on this job.</description>
  <label>Dependent Jenkins Job</label>
  <referenceTo>alm_pm2__Jenkins_Job__c</referenceTo>
  <relationshipLabel>Dependent Jenkins Jobs</relationshipLabel>
  <relationshipName>Dependent_Jenkins_Jobs</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Is_Validation__c</fullName>
  <defaultValue>false</defaultValue>
  <inlineHelpText>Indicates if this job is performing a validation. When unchecked it indicates this is for a deployment</inlineHelpText>
  <label>Is Validation?</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Last_Build_Status__c</fullName>
  <label>Last_Build_Status</label>
  <length>30</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Path__c</fullName>
  <description>Represents a relative URL path to a job on a Jenkins CI build server.</description>
  <label>Path</label>
  <length>255</length>
  <required>true</required>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Release__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <description>Represents a Sightline release.</description>
  <label>Release</label>
  <referenceTo>alm_pm2__Release__c</referenceTo>
  <relationshipLabel>Jenkins Jobs</relationshipLabel>
  <relationshipName>Jenkins_Jobs</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Token__c</fullName>
  <description>Represents an authentication token for a job on a Jenkins CI build server.</description>
  <label>Token</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Trigger_Job_Automatically__c</fullName>
  <defaultValue>false</defaultValue>
  <description>Trigger_Job_Automatically__c checkbox to be checked if the jenkins jobs should start automatically start the jenkins job.</description>
  <label>Trigger_Job_Automatically</label>
  <type>Checkbox</type>
 </fields>
 <label>Jenkins Job</label>
 <nameField>
  <label>Jenkins Job Name</label>
  <type>Text</type>
 </nameField>
 <pluralLabel>Jenkins Jobs</pluralLabel>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>